fixes spacing

--- a/style.css
+++ b/style.css
@@ -49,7 +49,10 @@ ul {
     display: inline-block;
     padding-top: .5%;
 }
-#about-text, #contact-text, #portfolio-text {
+#about-text {
+    padding-bottom: 2.5%;
+}
+#about-text, #contact-text, #portfolio-text, #service-container {
     padding-top: 1%;
 }
 #gltile {
